Mobile frontend bug fixes, subnav top items feature
- Nagging inconsistent spacing with comment form write/preview
- comment collapse cropped on mobile
- Comments with long non-wrapping code overflow
- comment form tries to zoom on mobile
- login form rounded on mobile

--- a/assets/app/components/comments.scss
+++ b/assets/app/components/comments.scss
@@ -17,20 +17,33 @@
   }
 }
 
+.comment_wrapper {
+  @include breakpoint(mobile, max) {
+    margin-left: 24px;
+    font-size: ($root-font-size * 0.95);
+  }
+}
+
 .comment_form {
   $border: 1px solid $light-grey;
   border: $border;
   border-radius: 3px;
+  display: flex;
+  flex-wrap: wrap;
   margin-bottom: $base-spacing*1.5;
+  min-height: 100px;
+
+  &.is-hidden {
+    display: none;
+  }
 
   &-write {
     background: transparent;
     border: none;
-    font-family: $code;
-    font-size: 0.8125em;
-    line-height: 1.5em;
-    min-height: 60px;
-    padding: 1.5em;
+    display: flex;
+    font-size: 16px; // Prevent iOS from zooming on input elements
+    line-height: 1.65em;
+    padding: 1em 1.5em;
     resize: none !important;
     width: 100%;
 
@@ -45,25 +58,28 @@
 
   &-preview {
     display: none;
-    padding: 1em;
-    min-height: 65px;
+    padding: 1em 1.5em;
+    width: 100%;
 
     & > *:last-child {
       margin-bottom: 0;
     }
 
     .comment_form--preview & {
-      display: block;
+      display: flex;
     }
   }
 
   &-toolbar {
+    align-self: flex-end;
     background: $lightest-grey;
     border-top: $border;
     display: flex;
     flex-wrap: wrap;
+    height: 40px;
     justify-content: space-between;
     padding: 0.25em;
+    width: 100%;
 
     &-toggle {
       align-items: center;
@@ -91,7 +107,9 @@
     }
 
     &-submit {
+      // This is a button
       border: none;
+      border-radius: $base-border-radius !important;
       background: $green;
       color: $white;
       cursor: pointer;
@@ -177,18 +195,17 @@
     position: relative;
     width: 100%;
 
-    // Highlight the permalink comment
-    .comment.is-permalink > & {
-      &:before {
-        @include position(absolute, -4px -10px -4px -37px);
-        background: $light-green;
-        border-radius: 2px;
-        content: "";
-        z-index: 0;
-      }
-    }
-
     & > * { z-index: 1; }
+  }
+  // Highlight the permalink comment
+  &.is-permalink > .comment-header {
+    &:before {
+      @include position(absolute, -4px -10px -4px -37px);
+      background: $light-green;
+      border-radius: 2px;
+      content: "";
+      z-index: 0;
+    }
   }
 
   &-footer {
@@ -234,8 +251,8 @@
     .comment.is-permalink > & a { color: $black; }
 
     a {
-      color: $medium-grey;
-      &:hover { color: $black; }
+      color: $black;
+      &:hover { text-decoration: underline; }
       &:after { content: " \2022"; }
       &:last-child:after { display: none; }
     }
@@ -291,6 +308,7 @@
   pre {
     margin-top: 0;
     max-height: 30em;
+    overflow-x: scroll;
 
     &:before {
       display: none; // hide left line number (?) element
