--- a/assets/app/components/form.scss
+++ b/assets/app/components/form.scss
@@ -30,7 +30,9 @@
     input {
       border: none;
       border-bottom: $border;
+      border-radius: 0; // Prevent iOS from rounding corners
       color: $black;
+      font-size: 16px; // Prevent iOS from zooming on input elements
       line-height: 1.5em;
       padding: 0.75em 0;
       width: 100%;
